--- a/website/templates/calendar.base.html
+++ b/website/templates/calendar.base.html
@@ -5,46 +5,40 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=0.8" />
 
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-            crossorigin="anonymous" />
-    <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.0/main.min.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-
-  </head>
-
-    <title>{% block title %}Calendar{% endblock %}</title>
-
-  <body>
- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbar"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbar">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link" id="home" href="/">Home</a>
-          <a class="nav-item nav-link" id="calendar" href="/calendar">Calendar</a>
-          <a class="nav-item nav-link" id="add" href="/add">Add Event</a>
-        </div>
-      </div>
-    </div>
-{% block body %}
-{% endblock body %}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.0/main.min.css">
 
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.0/main.min.js"></script>
 
+    <script>
 
+      document.addEventListener('DOMContentLoaded', function() {
+        var calendarEl = document.getElementById('calendar');
+        var calendar = new FullCalendar.Calendar(calendarEl, {
+          initialView: 'dayGridMonth',
+          aspectRatio: 2,
+        });
+        calendar.render();
+      });
+    </script>
+
+        <title>Calendar</title>
+
+  </head>
+
+
+  <body>
+
+    <div class="container" id="navbar">
+      <a class="nav-item nav-link" id="calendar" href="/">Home</a>
+      <a class="nav-item nav-link" id="add" href="/add">Add Event</a>
+    </div>
+
+  <div class="container">
+    <div id="calendar"></div>
+  </div>
 
   </body>
 </html>
+
