--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -22,15 +22,7 @@
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
             crossorigin="anonymous" />
 
-
-  </head>
-
-  <title>{% block title %}Home{% endblock %}</title>
-
-
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
        <button
           class="navbar-toggler"
           type="button"
@@ -42,17 +34,24 @@
 
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
+          {% if user.is_authenticated %}
           <a class="nav-item nav-link" id="home" href="/">Home</a>
-          <a class="nav-item nav-link" id="login" href="/login">Login</a>
-          <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
-
-          <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
           <a class="nav-item nav-link" id="calendar" href="/calendar">Calendar</a>
           <a class="nav-item nav-link" id="add" href="/add">Add Event</a>
+          <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
+          {% else %}
+          <a class="nav-item nav-link" id="login" href="/login">Login</a>
+          <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
+          {% endif %}
         </div>
       </div>
-      </div>
     </nav>
+  </head>
+
+  <title>{% block title %}Home{% endblock %}</title>
+
+
+  <body>
 
     {% with messages = get_flashed_messages(with_categories=true) %}
     {%if messages%}
