--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -35,20 +35,22 @@
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
           {% if user.is_authenticated %}
-          <a class="nav-item nav-link" id="home" href="/">Home</a>
-          <a class="nav-item nav-link" id="calendar" href="/calendar">Calendar</a>
-          <a class="nav-item nav-link" id="add" href="/add">Add Event</a>
-          <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
+          <a class="nav-item nav-link" id="home" href="/">Início</a>
+          <a class="nav-item nav-link" id="signUp" href="/sign-up">Cadastrar</a>
+          <a class="nav-item nav-link" id="calendar" href="/calendar">Agenda</a>
+          <a class="nav-item nav-link" id="logout" href="/logout">Sair</a>
           {% else %}
-          <a class="nav-item nav-link" id="login" href="/login">Login</a>
-          <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
+          <a class="nav-item nav-link" id="home" href="/">Início</a>
+          <a class="nav-item nav-link" id="signUp" href="/sign-up">Cadastrar</a>
+          <a class="nav-item nav-link" id="calendar" href="/calendar">Agenda</a>
+          <a class="nav-item nav-link" id="logout" href="/logout">Sair</a>
           {% endif %}
         </div>
       </div>
     </nav>
   </head>
 
-  <title>{% block title %}Home{% endblock %}</title>
+  <title>{% block title %}Início{% endblock %}</title>
 
 
   <body>
