--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -34,15 +34,11 @@
 
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
-          {% if user.is_authenticated %}
-          <a class="nav-item nav-link" id="home" href="/">Home</a>
-          <a class="nav-item nav-link" id="calendar" href="/calendar">Calendar</a>
-          <a class="nav-item nav-link" id="add" href="/add">Add Event</a>
-          <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
-          {% else %}
-          <a class="nav-item nav-link" id="login" href="/login">Login</a>
-          <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
-          {% endif %}
+          <a class="nav-item nav-link" id="home" href="/">Início</a>
+<!--          <a class="nav-item nav-link" id="login" href="/login">Entrar</a>-->
+          <a class="nav-item nav-link" id="signUp" href="/sign-up">Cadastrar</a>
+          <a class="nav-item nav-link" id="calendar" href="/calendar">Agenda</a>
+          <a class="nav-item nav-link" id="logout" href="/logout">Sair</a>
         </div>
       </div>
     </nav>
