--- a/website/templates/calendar.base.html
+++ b/website/templates/calendar.base.html
@@ -22,6 +22,24 @@
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
             crossorigin="anonymous" />
 
+      <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+
+   <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.0/main.min.css">
@@ -53,11 +71,23 @@
           locale: 'pt-br',
 
           dateClick: function(info) {
-          alert('clicked ' + info.dateStr);
+
            },
-          select: function(info) {
-           alert('selected ' + info.startStr + ' to ' + info.endStr);
+          select: function(event, jsEvent, view) {
+            $('#modalTitle').html(event.title);
+            $('#modalBody').html(event.description);
+<!--            $('#calendarModal #start').val(event.start.toLocaleString());-->
+<!--            $('#calendarModal #end_event').val(event.end.toLocaleString());-->
+            $('#calendarModal').modal();
            },
+
+<!--        eventClick:  function(events, jsEvent, view) {-->
+<!--            $('#modalTitle').html(event.title);-->
+<!--            $('#modalBody').html(event.description);-->
+<!--            $('#eventUrl').attr('href',event.url);-->
+<!--            $('#calendarModal').modal();-->
+<!--        },-->
+
 
          eventDurationEditable: true,
          eventTimeFormat: {hour: 'numeric', minute: '2-digit',meridiem: false
@@ -68,7 +98,7 @@
             id: '{{row.id}}',
             title: '{{row.title}}',
             start: '{{row.start}}',
-            end_event: '{{row.end_event}}',
+            end: '{{row.end_event}}',
             info: '{{row.info}}'
          },
          {% endfor %}
@@ -177,24 +207,68 @@
    </div>
 </div>
 
+  <div id="calendarModal" class="modal fade">
+<div class="modal-dialog">
+    <div class="modal-content">
 
-  <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
+        <div class="modal-header">
+            <h4 class="modal-title">Nova Consulta</h4>
+            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span> <span class="sr-only">close</span></button>
+            <h4 id="modalTitle" class="modal-title"></h4>
+        </div>
 
-   <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
+        <div id="modalBody" class="modal-body">
+        <form action="{{url_for('cal.add')}}" method="POST">
 
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
+               <div class="form-group">
+                  <label>Consulta:</label>
+                  <input type="text"
+                   class="form-control"
+                   name="title"
+                   id="title" placeholder="Título">
+               </div>
+
+                <div class="form-group">
+                  <label>Início:</label>
+                  <input type="text"
+               class="form-control"
+               name="start"
+               id="start"
+               placeholder="Ano-Mês-Dia">
+               </div>
+
+                <div class="form-group">
+                  <label>Até:</label>
+                  <input type="text"
+               class="form-control"
+               name="end_event"
+               id="end_event"
+               placeholder="Ano-Mês-Dia">
+               </div>
+
+                <div class="form-group">
+                    <label class="form-group">Anotações:</label>
+                    <input type="text"
+               class="form-control"
+               name="info"
+               id="info"
+               placeholder="Mais informações">
+                </div>
+
+                <div class="form-group">
+                  <button class="btn btn-primary" type="submit">Salvar</button>
+                </div>
+
+
+            </form>
+
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+    </div>
+</div>
+</div>
 
 {%block body %}
    <div class="container">
