--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -92,10 +92,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <script
-      type="text/javascript"
-      src="{{ url_for('static', filename='index.js') }}"
-    ></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='index.js') }}"> </script>
 
   </body>
 </html>
