--- a/website/templates/calendar.base.html
+++ b/website/templates/calendar.base.html
@@ -278,7 +278,7 @@
                     <button class="btn btn-canc-vis btn-warning">Editar</button>
                 </div>
                 <div class="form">
-                    <form class="form-horizontal" method="POST" action="{{url_for('cal.update', id=my_events['id'])}}">
+                    <form class="form-horizontal" method="POST" action="{{url_for('cal.update')}}">
 
                         <div class="form-group">
                             <label>Consulta:</label>
